feat: reset cards and other deck api
